[package]
name = "pact-broker-cli"
version = "0.2.2"
authors = ["Yousaf Nabi <you@saf.dev>"]
edition = "2024"
description = "A Rust and CLI client for the Pact Broker. Publish and retrieve pacts and verification results."
homepage = "https://www.pact.io"
repository = "https://github.com/pact-foundation/pact-broker-cli"
readme = "README.md"
keywords = ["testing", "pact", "contract-testing", "cli", "pact-broker"]
license = "MIT"
include = [
    "src/**",
    "Cargo.toml",
    "Cargo.lock",
    "/README.md",
    "LICENSE",
    "CHANGELOG.md",
]

[dependencies]
console = "0.16.0"
anyhow = "1.0.40"
base64 = "0.22.1"
clap = { version = "4.5.2", features = ["derive", "env", "cargo"] }
clap_complete = { version = "4.5.1", features = [] }
comfy-table = "7.1.0"
futures = { version = "0.3.29", features = [] }
glob = "0.3.0"
itertools = "0.14.0"
log = "0.4.14"
maplit = "1.0.2"
mime = "0.3.17"
pact_models = { version = "~1.3.6" }
regex = "1.10.2"
serde = "1.0.219"
serde_json = "1.0.142"
thiserror = "2.0.12"
tokio = { version = "1.35.1", features = ['rt-multi-thread'] }
tracing-appender = "0.2.3"
tracing-core = "0.1.32"
tracing-log = "0.2.0"
url = "2.5.0"
urlencoding = "2.1.3"
uuid = { version = "1.6.1", features = ["v4"] }


# OpenTelemetry dependencies
async-trait = "0.1.51"
http = "1.3.1"
reqwest-middleware = "0.4.2"
reqwest-tracing = { version = "0.5.8", features = ["tracing-opentelemetry_0_31_pkg", "opentelemetry_0_30"] }
opentelemetry = "0.31.0"
opentelemetry-http = "0.31.0"
opentelemetry_sdk = "0.31.0"
opentelemetry-stdout = { version = "0.31.0", features = ["trace", "logs"] }
opentelemetry-otlp = { version = "0.31.0", features = ["trace", "logs", "tls", "tls-roots", "grpc-tonic"] }
opentelemetry-semantic-conventions = "0.31.0"
opentelemetry-appender-tracing = "0.31.0"
tracing = { version= "0.1.41", features = ["std"]}
tracing-subscriber = { version = "0.3.20", features = ["env-filter","registry", "std", "fmt"] }
tracing-opentelemetry = "0.32.0"


[dependencies.reqwest]
version = "0.12.24"
default-features = false
features = ["rustls-tls-native-roots","native-tls-vendored", "blocking", "json", "stream"]

[dependencies.serde_with]
version = "3.15.0"
features = ["json"]


[dev-dependencies]
expectest = "0.12.0"
trycmd = "0.15.0"
pact_consumer = "~1.4.2"

[profile.release]
strip = true      # Automatically strip symbols from the binary.
opt-level = "z"   # Optimize for size.
codegen-units = 1
panic = "abort"
lto = true
#  File  .text   Size Crate
# 68.0% 100.3% 5.5MiB [Unknown]
# 67.8% 100.0% 5.5MiB .text section size, the file size is 8.1MiB

# # lto = false
#  File  .text   Size Crate
# 59.8% 100.1% 6.5MiB [Unknown]
# 59.8% 100.0% 6.5MiB .text section size, the file size is 10.9MiB

[profile.release-aarch64-freebsd]
inherits = "release"
panic = "unwind"
# if panic abort is set for aarch64 freebsd, it fails in cross
# https://github.com/cross-rs/cross/issues/1363#issuecomment-1783917450

# [target.'cfg(target_os = "freebsd")'.dependencies]
# indexmap = { version = "1.9.3", features = ["std"] }
# # requires std feature for detection with cross for aarch64-unknown-freebsd target
# # https://github.com/tower-rs/tower/issues/466
# # https://github.com/indexmap-rs/indexmap/pull/145


[lib]
name = "pact_broker_cli"
path = "src/main.rs"

[[bin]]
name = "pact-broker-cli"
path = "src/bin.rs"
