[package]
name = "pact-broker-cli"
version = "0.6.2"
authors = ["Yousaf Nabi <you@saf.dev>"]
edition = "2024"
description = "A Rust and CLI client for the Pact Broker. Publish and retrieve pacts and verification results."
homepage = "https://www.pact.io"
repository = "https://github.com/pact-foundation/pact-broker-cli"
readme = "README.md"
keywords = ["testing", "pact", "contract-testing", "cli", "pact-broker"]
license = "MIT"
include = [
    "src/**",
    "Cargo.toml",
    "Cargo.lock",
    "/README.md",
    "LICENSE",
    "CHANGELOG.md",
]

[dependencies]
console = "0.16.2"
anyhow = "1.0.102"
base64 = "0.22.1"
clap = { version = "4.5.60", features = ["derive", "env", "cargo"] }
clap_complete = { version = "4.5.66", features = [] }
comfy-table = "7.2.2"
futures = { version = "0.3.32", features = [] }
glob = "0.3.3"
itertools = "0.14.0"
log = "0.4.29"
maplit = "1.0.2"
mime = "0.3.17"
pact_models = { version = "~1.3.8" }
regex = "1.12.3"
serde = "1.0.228"
serde_json = "1.0.149"
thiserror = "2.0.18"
tokio = { version = "1.49.0", features = ['rt-multi-thread'] }
tracing-appender = "0.2.4"
tracing-core = "0.1.36"
tracing-log = "0.2.0"
url = "2.5.8"
urlencoding = "2.1.3"
uuid = { version = "1.21.0", features = ["v4"] }


# OpenTelemetry dependencies
async-trait = "0.1.89"
http = "1.4.0"
reqwest-middleware = "0.4.2"
reqwest-tracing = { version = "0.5.8", features = ["tracing-opentelemetry_0_31_pkg", "opentelemetry_0_30"] }
opentelemetry = "0.31.0"
opentelemetry-http = "0.31.0"
opentelemetry_sdk = "0.31.0"
opentelemetry-stdout = { version = "0.31.0", features = ["trace", "logs"] }
opentelemetry-otlp = { version = "0.31.0", features = ["trace", "logs", "tls", "tls-roots", "grpc-tonic"] }
opentelemetry-semantic-conventions = "0.31.0"
opentelemetry-appender-tracing = "0.31.1"
tracing = { version= "0.1.44", features = ["std"]}
tracing-subscriber = { version = "0.3.22", features = ["env-filter","registry", "std", "fmt"] }
tracing-opentelemetry = "0.32.1"


[dependencies.reqwest]
version = "0.12.28"
default-features = false
features = ["rustls-tls-native-roots","native-tls-vendored", "blocking", "json", "stream"]
[dependencies.serde_with]
version = "3.17.0"
features = ["json"]


[dev-dependencies]
expectest = "0.12.0"
trycmd = "1.0.0"
pact_consumer = "~1.4.2"

[profile.release]
strip = true      # Automatically strip symbols from the binary.
opt-level = "z"   # Optimize for size.
codegen-units = 1
panic = "abort"
lto = true
#  File  .text   Size Crate
# 68.0% 100.3% 5.5MiB [Unknown]
# 67.8% 100.0% 5.5MiB .text section size, the file size is 8.1MiB

# # lto = false
#  File  .text   Size Crate
# 59.8% 100.1% 6.5MiB [Unknown]
# 59.8% 100.0% 6.5MiB .text section size, the file size is 10.9MiB

[profile.release-aarch64-freebsd]
inherits = "release"
panic = "unwind"
# if panic abort is set for aarch64 freebsd, it fails in cross
# https://github.com/cross-rs/cross/issues/1363#issuecomment-1783917450

# [target.'cfg(target_os = "freebsd")'.dependencies]
# indexmap = { version = "1.9.3", features = ["std"] }
# # requires std feature for detection with cross for aarch64-unknown-freebsd target
# # https://github.com/tower-rs/tower/issues/466
# # https://github.com/indexmap-rs/indexmap/pull/145


[lib]
name = "pact_broker_cli"
path = "src/main.rs"

[[bin]]
name = "pact-broker-cli"
path = "src/bin.rs"
