#:tombi toml-version = "v1.0.0"

[package]
name = "pact-broker-cli"
version = "0.8.0"
edition = "2024"
description = "A Rust and CLI client for the Pact Broker. Publish and retrieve pacts and verification results."
readme = "README.md"
homepage = "https://www.pact.io"
repository = "https://github.com/pact-foundation/pact-broker-cli"
license = "MIT"
keywords = ["cli", "contract-testing", "pact", "pact-broker", "testing"]
include = [
  "/README.md",
  "CHANGELOG.md",
  "Cargo.lock",
  "Cargo.toml",
  "LICENSE",
  "src/**",
]

[workspace.metadata.dist]
cargo-dist-version = "0.32.0"
ci = "github"
targets = [
  "aarch64-apple-darwin",
  # Waiting for https://github.com/briansmith/ring/pull/2803 to be released
  # "aarch64-pc-windows-msvc",
  "aarch64-unknown-linux-gnu",
  "aarch64-unknown-linux-musl",
  "x86_64-apple-darwin",
  "x86_64-pc-windows-msvc",
  "x86_64-unknown-linux-gnu",
  "x86_64-unknown-linux-musl",
]
bin-aliases = { pact-broker-cli = ["pact-broker"] }
install-path = "~/.pact/bin"
# pr-run-mode = "upload"  # Uncomment to run full builds on PRs

[lib]
name = "pact_broker_cli"
path = "src/main.rs"

[[bin]]
name = "pact-broker-cli"
path = "src/bin.rs"

[dependencies]
anyhow = "1"
async-trait = "0.1"
base64 = "0.22"
clap = { version = "4", features = ["cargo", "derive", "env"] }
clap_complete = "4"
comfy-table = "7"
console = "0.16"
futures = "0.3"
glob = "0.3"
http = "1"
httpdate = "1"
itertools = "0.14"
log = "0.4"
maplit = "1.0"
mime = "0.3"
opentelemetry = "0.32"
opentelemetry-appender-tracing = "0.32"
opentelemetry-http = "0.32"
opentelemetry-otlp = { version = "0.32", features = [
  "grpc-tonic",
  "logs",
  "tls",
  "tls-roots",
  "trace"
] }
opentelemetry_sdk = "0.32"
opentelemetry-stdout = { version = "0.32", features = ["logs", "trace"] }
pact_models = "1"
regex = "1"
reqwest = { version = "0.13", default-features = false, features = [
  "blocking",
  "http2",
  "json",
  "native-tls-vendored",
  "stream"
] }
reqwest-middleware = "0.5"
reqwest-retry = "0.9"
reqwest-tracing = { version = "0.7", features = ["opentelemetry_0_32"] }
serde = "1"
serde_json = "1"
serde_with = { version = "3", features = ["json"] }
thiserror = "2"
tokio = { version = "1", features = ["rt-multi-thread"] }
tracing = { version = "0.1", features = ["std"] }
tracing-opentelemetry = "0.33"
tracing-subscriber = { version = "0.3", features = [
  "env-filter",
  "fmt",
  "registry",
  "std"
] }
url = "2"
urlencoding = "2"
uuid = { version = "1", features = ["v4"] }

[dev-dependencies]
axum = "=0.8.9"
expectest = "=0.12.0"
pact_consumer = "=1.4.4"
pretty_assertions = "=1.4.1"
test-log = { version = "=0.2.21", features = ["trace"] }
tokio = { version = "=1.52.3", features = ["macros", "net", "rt-multi-thread"] }
trycmd = "=1.2.0"

[profile.dist]
inherits = "release"
opt-level = "z"
strip = true
lto = true
codegen-units = 1
